--- a/Pr6/part1/Makefile
+++ b/Pr6/part1/Makefile
@@ -2,10 +2,10 @@ task1: compile output
 
 all: parent child
 
-parent: parent.c
-	 gcc parent.c -o parent
+parent: PR7_1.1.c
+	 gcc PR7_1.1.c -o parent_program
 
-child: child.c
-	 gcc child.c -o child
+child: PR7_1.2.c
+	 gcc PR7_1.2.c -o child_program
 
 
